  Fixed menu bar not staying docked to left side
  Removed snakes game Easter egg
  Removed references to visionapp Remote Desktop
  Changed name and location of log file
	%USERPROFILE%\Local Settings\Application Data\mRemoteNG\mRemoteNG.log
  Changed filename delimiter in title bar from pipe to dash
  Changed default format for saving screenshot images to PNG
  Changed website addresses

1.50:
  Added the following formats to the "Save Connections As" function:
    mRemote CSV (standard CSV file with all properties)
    vRD 2008 CSV (standard CSV file with properties relevant for importing connections in vRD 2008)
  Fixed bug in inheritance code (SmartSize Mode and View Only properies were always shown when using VNC)

1.49:
  mRemote and visionapp Remote Desktop 2008 merge!
    Read more here: http://www.mremote.org/wiki/visionappMerge.ashx
    or in the Announcement panel.
  Added features to the update function
  Added Announcement feature
  Changed copyright notice in about screen and text when connecting via VNC
  Fixed some SQL-related problems

V1.48:
  ATTENTION! There is a bug in the automatic update code in 1.45 so you will have to download the new version manually from http://www.mremote.org/wiki/Downloads.ashx
  
  Added startup components check with directions to fix component installation (also available in Tools - Components Check)
  Added "Try to integrate" option to Ext. Apps. If enabled mRemote will try to integrate the app into a tab container like any other connection protocol.
  Added Ext. App as protocol. Any Ext. App can be launched just like a normal connection.
    Example (DameWare Mini Remote Control):
    Create a new Ext. App with the following properties:
      Display Name: DameWare
      Filename: c:\PathToYourDameWareInstallDir\DWRCC.exe
      Arguments: -c: -h: -m:%hostname% -u:%username% -p:"%password%" -d:%domain%
      Options: Try to integrate
    Create a new connection and select Ext. App as protocol